--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:cover": "jest --coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "lint": "tslint {src,test}/**/*.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "watch": "tsc -w"
   },
   "keywords": [
     "serverless",
@@ -37,12 +38,13 @@
   "devDependencies": {
     "@types/jest": "^20.0.5",
     "@types/node": "^8.0.17",
-    "ts-jest": "^20.0.7",
-    "tslint": "^5.5.0",
-    "typescript": "^2.4.2",
+    "aws-sdk": "^2.204.0",
     "coveralls": "^2.13.1",
     "dot-json": "^1.0.3",
-    "jest": "^20.0.4"
+    "jest": "^20.0.4",
+    "ts-jest": "^20.0.7",
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.2"
   },
   "jest": {
     "transform": {
